--- a/about.html
+++ b/about.html
@@ -22,88 +22,56 @@
   <body>
     <div class="wrapper">
       <div
-      id="header"
-      class="htc-header"
-      style="background-color: rgba(239, 239, 239, 0.38)"
-    >
-    <header>
-      <!-- Top Navbar -->
-      <div class="top_nav">
-        <div class="container">
-          <ul class="list-inline info">
-            <li>
-              <p>
-                <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
-              </p>
-            </li>
-            <li>
-              <a href="tel: +1 (201)903-5007" class="cs-phone"
-                ><span class="fa fa-phone"></span>
-                <strong> (201)903-5007</strong>
-              </a>
-            </li>
-            <li>
-              <a
-                href="mailto:powerfulconstruction10@gmail.com"
-                class="cs-email"
-              >
-                <span class="fa fa-envelope"></span>
-                <strong> powerfulconstruction10@gmail.com</strong>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-      <div
-        id="sticky-header-with-topbar"
-        class="mainmenu__wrap sticky__header"
+        id="header"
+        class="htc-header"
+        style="background-color: rgba(239, 239, 239, 0.38)"
       >
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-6 col-xs-7">
-              <div class="logo">
-                <a href="https://powerful-construction.com/">
-                  <img src="images/logo/11.png" alt="logo image" />
-                </a>
-              </div>
+        <header>
+          <!-- Top Navbar -->
+          <div class="top_nav">
+            <div class="container">
+              <ul class="list-inline info">
+                <li>
+                  <p>
+                    <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                  </p>
+                </li>
+                <li>
+                  <a href="tel: +1 (201)903-5007" class="cs-phone"
+                    ><span class="fa fa-phone"></span>
+                    <strong> (201)903-5007</strong>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="mailto:powerfulconstruction10@gmail.com"
+                    class="cs-email"
+                  >
+                    <strong> powerfulconstruction10@gmail.com</strong>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
+        </header>
+        <div
+          id="sticky-header-with-topbar"
+          class="mainmenu__wrap sticky__header"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-md-2 col-sm-6 col-xs-7">
+                <div class="logo">
+                  <a href="https://powerful-construction.com/">
+                    <img src="images/logo/11.png" alt="logo image" />
+                  </a>
+                </div>
+              </div>
 
-            <div class="col-md-7 col-sm-6 col-xs-5">
-              <nav class="main__menu__nav hidden-xs hidden-sm">
-                <ul class="main__menu">
-                  <li class="drop">
-                    <a href="https://powerful-construction.com/">HOME</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/about"
-                      >ABOUT</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/service"
-                      >SERVICES</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/Project"
-                      >PROJECTS</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/faq">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/contact"
-                      >CONTACT</a
-                    >
-                  </li>
-                </ul>
-              </nav>
-              <div class="mobile-menu clearfix visible-xs visible-sm">
-                <nav id="mobile_dropdown">
-                  <ul>
-                    <li>
+              <div class="col-md-7 col-sm-6 col-xs-5">
+                <nav class="main__menu__nav hidden-xs hidden-sm">
+                  <ul class="main__menu">
+                    <li class="drop">
                       <a href="https://powerful-construction.com/">HOME</a>
                     </li>
                     <li>
@@ -131,24 +99,55 @@
                     </li>
                   </ul>
                 </nav>
+                <div class="mobile-menu clearfix visible-xs visible-sm">
+                  <nav id="mobile_dropdown">
+                    <ul>
+                      <li>
+                        <a href="https://powerful-construction.com/">HOME</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/about"
+                          >ABOUT</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/service"
+                          >SERVICES</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/Project"
+                          >PROJECTS</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/faq">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/contact"
+                          >CONTACT</a
+                        >
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="col-md-3 hidden-xs main__menu__nav">
+                <a
+                  href="tel: +1 (201)903-5007"
+                  class="phone_text main__menu"
+                  style="color: rgb(203, 0, 0)"
+                >
+                  <span class="fa fa-phone"></span> (201)903-5007
+                </a>
               </div>
             </div>
-            <div class="col-md-3 hidden-xs main__menu__nav">
-              <a
-                href="tel: +1 (201)903-5007"
-                class="phone_text main__menu"
-                style="color: rgb(203, 0, 0)"
-              >
-                <span class="fa fa-phone"></span> (201)903-5007
-              </a>
-            </div>
+            <div class="mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
         </div>
-      </div>
 
-      <!-- End Mainmenu Area -->
-    </div>
+        <!-- End Mainmenu Area -->
+      </div>
       <!-- End Header Style -->
       <!-- Start Bradcaump area -->
       <div
@@ -166,7 +165,11 @@
                 <div class="bradcaump__inner text-center">
                   <h2 class="bradcaump-title">About Us</h2>
                   <nav class="bradcaump-inner">
-                    <a class="breadcrumb-item" href="https://powerful-construction.com">POWERFUL</a>
+                    <a
+                      class="breadcrumb-item"
+                      href="https://powerful-construction.com"
+                      >POWERFUL</a
+                    >
                     <span class="brd-separetor">-</span>
                     <span class="breadcrumb-item active"
                       >CONSTRUCTION - LLC</span
@@ -194,7 +197,9 @@
                   </h2>
                 </div>
                 <div class="htc__bst__btn text-center mt--30">
-                  <a class="htc__btn" href="https://powerful-construction.com/contact"
+                  <a
+                    class="htc__btn"
+                    href="https://powerful-construction.com/contact"
                     >Schedule A Free Consultation</a
                   >
                 </div>
@@ -243,7 +248,7 @@
       </section>
       <!-- End Offer Area -->
       <!-- Start Offer Area -->
-   <section class="htc__about__area ptb--150 bg__white">
+      <section class="htc__about__area ptb--150 bg__white">
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-lg-3 col-lg-offset-1 col-sm-6 col-xs-12">
@@ -355,12 +360,12 @@
                 </div>
               </div>
             </div>
-            <br>
+            <br />
             <div class="row">
               <header>
                 <h1>Meet Our Expert Team at Powerful Construction</h1>
               </header>
-              <br>
+              <br />
               <section>
                 <h2>Construction Specialist</h2>
                 <p>
@@ -370,7 +375,7 @@
                   to ensure quality workmanship and superior results.
                 </p>
               </section>
-              <br>
+              <br />
               <section>
                 <h2>Roofing Specialist</h2>
                 <p>
@@ -382,7 +387,7 @@
                   precision.
                 </p>
               </section>
-              <br>
+              <br />
               <section>
                 <h2>Siding Specialist</h2>
                 <p>
@@ -393,7 +398,7 @@
                   value of your home or business.
                 </p>
               </section>
-              <br>
+              <br />
               <section>
                 <h2>Gutter Specialist</h2>
                 <p>
