--- a/gutters.html
+++ b/gutters.html
@@ -26,35 +26,34 @@
         class="htc-header"
         style="background-color: rgba(239, 239, 239, 0.38)"
       >
-      <header>
-        <!-- Top Navbar -->
-        <div class="top_nav">
-          <div class="container">
-            <ul class="list-inline info">
-              <li>
-                <p>
-                  <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
-                </p>
-              </li>
-              <li>
-                <a href="tel: +1 (201)903-5007" class="cs-phone"
-                  ><span class="fa fa-phone"></span>
-                  <strong> (201)903-5007</strong>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="mailto:powerfulconstruction10@gmail.com"
-                  class="cs-email"
-                >
-                  <span class="fa fa-envelope"></span>
-                  <strong> powerfulconstruction10@gmail.com</strong>
-                </a>
-              </li>
-            </ul>
+        <header>
+          <!-- Top Navbar -->
+          <div class="top_nav">
+            <div class="container">
+              <ul class="list-inline info">
+                <li>
+                  <p>
+                    <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                  </p>
+                </li>
+                <li>
+                  <a href="tel: +1 (201)903-5007" class="cs-phone"
+                    ><span class="fa fa-phone"></span>
+                    <strong> (201)903-5007</strong>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="mailto:powerfulconstruction10@gmail.com"
+                    class="cs-email"
+                  >
+                    <strong> powerfulconstruction10@gmail.com</strong>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </header>
+        </header>
         <div
           id="sticky-header-with-topbar"
           class="mainmenu__wrap sticky__header"
@@ -184,29 +183,60 @@
       <!-- Start Contact Address -->
       <section class="htc__contact__area bg__white ptb--150 container">
         <header>
-            <h1>Enhance Your Property's Protection with Powerful Construction's Gutter Solutions</h1>
+          <h1>
+            Enhance Your Property's Protection with Powerful Construction's
+            Gutter Solutions
+          </h1>
         </header>
         <main>
-            <section>
-                <h2>Custom Gutter Installation</h2>
-                <p>We specialize in designing and installing custom gutter systems that seamlessly blend with your property's architecture. Whether you need traditional aluminum gutters or prefer a more modern seamless design, we have the expertise to bring your vision to life.</p>
-            </section>
-            <section>
-                <h2>Gutter Repair and Maintenance</h2>
-                <p>Over time, gutters can become clogged, damaged, or worn out. Our team provides comprehensive repair and maintenance services to ensure your gutters remain in optimal condition. From unclogging downspouts to repairing leaks and replacing damaged sections, we've got you covered.</p>
-            </section>
-            <section>
-                <h2>Gutter Protection Systems</h2>
-                <p>Keep your gutters free from debris and prevent clogs with our high-quality gutter protection systems. We offer a range of options, including gutter guards and screens, to help extend the lifespan of your gutters and minimize the need for frequent cleaning.</p>
-            </section>
-            <section>
-                <h2>Seamless Gutter Upgrades</h2>
-                <p>Upgrade to seamless gutters for a sleek, low-maintenance solution that enhances the aesthetic appeal of your property. Our seamless gutter systems are custom fabricated on-site to ensure a perfect fit and maximum durability.</p>
-            </section>
-            <section>
-                <h2>Downspout Installation and Repair</h2>
-                <p>Proper drainage is essential for preventing water damage to your property's foundation. We install and repair downspouts to ensure efficient water flow away from your home or business, minimizing the risk of basement flooding and structural issues.</p>
-            </section>
+          <section>
+            <h2>Custom Gutter Installation</h2>
+            <p>
+              We specialize in designing and installing custom gutter systems
+              that seamlessly blend with your property's architecture. Whether
+              you need traditional aluminum gutters or prefer a more modern
+              seamless design, we have the expertise to bring your vision to
+              life.
+            </p>
+          </section>
+          <section>
+            <h2>Gutter Repair and Maintenance</h2>
+            <p>
+              Over time, gutters can become clogged, damaged, or worn out. Our
+              team provides comprehensive repair and maintenance services to
+              ensure your gutters remain in optimal condition. From unclogging
+              downspouts to repairing leaks and replacing damaged sections,
+              we've got you covered.
+            </p>
+          </section>
+          <section>
+            <h2>Gutter Protection Systems</h2>
+            <p>
+              Keep your gutters free from debris and prevent clogs with our
+              high-quality gutter protection systems. We offer a range of
+              options, including gutter guards and screens, to help extend the
+              lifespan of your gutters and minimize the need for frequent
+              cleaning.
+            </p>
+          </section>
+          <section>
+            <h2>Seamless Gutter Upgrades</h2>
+            <p>
+              Upgrade to seamless gutters for a sleek, low-maintenance solution
+              that enhances the aesthetic appeal of your property. Our seamless
+              gutter systems are custom fabricated on-site to ensure a perfect
+              fit and maximum durability.
+            </p>
+          </section>
+          <section>
+            <h2>Downspout Installation and Repair</h2>
+            <p>
+              Proper drainage is essential for preventing water damage to your
+              property's foundation. We install and repair downspouts to ensure
+              efficient water flow away from your home or business, minimizing
+              the risk of basement flooding and structural issues.
+            </p>
+          </section>
         </main>
       </section>
 
