--- a/siding.html
+++ b/siding.html
@@ -22,88 +22,56 @@
   <body>
     <div class="wrapper">
       <div
-      id="header"
-      class="htc-header"
-      style="background-color: rgba(239, 239, 239, 0.38)"
-    >
-    <header>
-      <!-- Top Navbar -->
-      <div class="top_nav">
-        <div class="container">
-          <ul class="list-inline info">
-            <li>
-              <p>
-                <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
-              </p>
-            </li>
-            <li>
-              <a href="tel: +1 (201)903-5007" class="cs-phone"
-                ><span class="fa fa-phone"></span>
-                <strong> (201)903-5007</strong>
-              </a>
-            </li>
-            <li>
-              <a
-                href="mailto:powerfulconstruction10@gmail.com"
-                class="cs-email"
-              >
-                <span class="fa fa-envelope"></span>
-                <strong> powerfulconstruction10@gmail.com</strong>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-      <div
-        id="sticky-header-with-topbar"
-        class="mainmenu__wrap sticky__header"
+        id="header"
+        class="htc-header"
+        style="background-color: rgba(239, 239, 239, 0.38)"
       >
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-6 col-xs-7">
-              <div class="logo">
-                <a href="https://powerful-construction.com/">
-                  <img src="images/logo/11.png" alt="logo image" />
-                </a>
-              </div>
+        <header>
+          <!-- Top Navbar -->
+          <div class="top_nav">
+            <div class="container">
+              <ul class="list-inline info">
+                <li>
+                  <p>
+                    <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                  </p>
+                </li>
+                <li>
+                  <a href="tel: +1 (201)903-5007" class="cs-phone"
+                    ><span class="fa fa-phone"></span>
+                    <strong> (201)903-5007</strong>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="mailto:powerfulconstruction10@gmail.com"
+                    class="cs-email"
+                  >
+                    <strong> powerfulconstruction10@gmail.com</strong>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
+        </header>
+        <div
+          id="sticky-header-with-topbar"
+          class="mainmenu__wrap sticky__header"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-md-2 col-sm-6 col-xs-7">
+                <div class="logo">
+                  <a href="https://powerful-construction.com/">
+                    <img src="images/logo/11.png" alt="logo image" />
+                  </a>
+                </div>
+              </div>
 
-            <div class="col-md-7 col-sm-6 col-xs-5">
-              <nav class="main__menu__nav hidden-xs hidden-sm">
-                <ul class="main__menu">
-                  <li class="drop">
-                    <a href="https://powerful-construction.com/">HOME</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/about"
-                      >ABOUT</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/service"
-                      >SERVICES</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/Project"
-                      >PROJECTS</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/faq">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/contact"
-                      >CONTACT</a
-                    >
-                  </li>
-                </ul>
-              </nav>
-              <div class="mobile-menu clearfix visible-xs visible-sm">
-                <nav id="mobile_dropdown">
-                  <ul>
-                    <li>
+              <div class="col-md-7 col-sm-6 col-xs-5">
+                <nav class="main__menu__nav hidden-xs hidden-sm">
+                  <ul class="main__menu">
+                    <li class="drop">
                       <a href="https://powerful-construction.com/">HOME</a>
                     </li>
                     <li>
@@ -131,24 +99,55 @@
                     </li>
                   </ul>
                 </nav>
+                <div class="mobile-menu clearfix visible-xs visible-sm">
+                  <nav id="mobile_dropdown">
+                    <ul>
+                      <li>
+                        <a href="https://powerful-construction.com/">HOME</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/about"
+                          >ABOUT</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/service"
+                          >SERVICES</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/Project"
+                          >PROJECTS</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/faq">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/contact"
+                          >CONTACT</a
+                        >
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="col-md-3 hidden-xs main__menu__nav">
+                <a
+                  href="tel: +1 (201)903-5007"
+                  class="phone_text main__menu"
+                  style="color: rgb(203, 0, 0)"
+                >
+                  <span class="fa fa-phone"></span> (201)903-5007
+                </a>
               </div>
             </div>
-            <div class="col-md-3 hidden-xs main__menu__nav">
-              <a
-                href="tel: +1 (201)903-5007"
-                class="phone_text main__menu"
-                style="color: rgb(203, 0, 0)"
-              >
-                <span class="fa fa-phone"></span> (201)903-5007
-              </a>
-            </div>
+            <div class="mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
         </div>
-      </div>
 
-      <!-- End Mainmenu Area -->
-    </div>
+        <!-- End Mainmenu Area -->
+      </div>
       <!-- End Header Style -->
       <!-- Start Bradcaump area -->
       <div
@@ -184,30 +183,69 @@
       <!-- Start Contact Address -->
       <section class="htc__contact__area bg__white ptb--150 container">
         <header>
-            <h1>Welcome to Powerful Construction</h1>
-            <h2>Your Trusted Partner for Premium Siding Solutions</h2>
+          <h1>Welcome to Powerful Construction</h1>
+          <h2>Your Trusted Partner for Premium Siding Solutions</h2>
         </header>
         <main>
-            <section>
-                <h3>Why Choose Powerful Construction for Your Siding Needs?</h3>
-                <ol>
-                    <li><strong>Exceptional Quality:</strong> We source the finest materials and employ skilled professionals to ensure that every siding project we undertake meets the highest standards of quality and craftsmanship.</li>
-                    <li><strong>Customized Solutions:</strong> Whether you prefer classic vinyl siding, elegant fiber cement siding, or rustic wood siding, we offer a wide range of options to suit your aesthetic preferences and budget requirements.</li>
-                    <li><strong>Expert Installation:</strong> Our team of experienced installers is dedicated to delivering flawless results, paying close attention to every detail to ensure a seamless and precise installation process.</li>
-                    <li><strong>Durability and Protection:</strong> Our siding products are engineered to withstand the elements, providing your home or business with superior protection against harsh weather conditions, moisture, and pests.</li>
-                    <li><strong>Enhanced Curb Appeal:</strong> A beautifully crafted siding not only adds value to your property but also enhances its curb appeal, making a lasting impression on visitors and passersby.</li>
-                </ol>
-            </section>
-            <section>
-                <h3>Our Siding Services Include:</h3>
-                <ul>
-                    <li><strong>Siding Installation:</strong> Whether you're building a new home or renovating an existing one, our team will work closely with you to install the perfect siding solution for your property.</li>
-                    <li><strong>Siding Replacement:</strong> If your current siding is worn-out or damaged, we offer efficient and reliable siding replacement services to restore the beauty and integrity of your home or business.</li>
-                    <li><strong>Siding Repair:</strong> From minor repairs to extensive restoration projects, our skilled technicians have the expertise and tools to fix any issues with your siding, ensuring its longevity and performance.</li>
-                </ul>
-            </section>
+          <section>
+            <h3>Why Choose Powerful Construction for Your Siding Needs?</h3>
+            <ol>
+              <li>
+                <strong>Exceptional Quality:</strong> We source the finest
+                materials and employ skilled professionals to ensure that every
+                siding project we undertake meets the highest standards of
+                quality and craftsmanship.
+              </li>
+              <li>
+                <strong>Customized Solutions:</strong> Whether you prefer
+                classic vinyl siding, elegant fiber cement siding, or rustic
+                wood siding, we offer a wide range of options to suit your
+                aesthetic preferences and budget requirements.
+              </li>
+              <li>
+                <strong>Expert Installation:</strong> Our team of experienced
+                installers is dedicated to delivering flawless results, paying
+                close attention to every detail to ensure a seamless and precise
+                installation process.
+              </li>
+              <li>
+                <strong>Durability and Protection:</strong> Our siding products
+                are engineered to withstand the elements, providing your home or
+                business with superior protection against harsh weather
+                conditions, moisture, and pests.
+              </li>
+              <li>
+                <strong>Enhanced Curb Appeal:</strong> A beautifully crafted
+                siding not only adds value to your property but also enhances
+                its curb appeal, making a lasting impression on visitors and
+                passersby.
+              </li>
+            </ol>
+          </section>
+          <section>
+            <h3>Our Siding Services Include:</h3>
+            <ul>
+              <li>
+                <strong>Siding Installation:</strong> Whether you're building a
+                new home or renovating an existing one, our team will work
+                closely with you to install the perfect siding solution for your
+                property.
+              </li>
+              <li>
+                <strong>Siding Replacement:</strong> If your current siding is
+                worn-out or damaged, we offer efficient and reliable siding
+                replacement services to restore the beauty and integrity of your
+                home or business.
+              </li>
+              <li>
+                <strong>Siding Repair:</strong> From minor repairs to extensive
+                restoration projects, our skilled technicians have the expertise
+                and tools to fix any issues with your siding, ensuring its
+                longevity and performance.
+              </li>
+            </ul>
+          </section>
         </main>
-        
       </section>
 
       <!-- End Contact Address -->
