--- a/Project.html
+++ b/Project.html
@@ -37,88 +37,56 @@
     <div class="wrapper">
       <!-- Start Header Style -->
       <div
-      id="header"
-      class="htc-header"
-      style="background-color: rgba(239, 239, 239, 0.38)"
-    >
-    <header>
-      <!-- Top Navbar -->
-      <div class="top_nav">
-        <div class="container">
-          <ul class="list-inline info">
-            <li>
-              <p>
-                <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
-              </p>
-            </li>
-            <li>
-              <a href="tel: +1 (201)903-5007" class="cs-phone"
-                ><span class="fa fa-phone"></span>
-                <strong> (201)903-5007</strong>
-              </a>
-            </li>
-            <li>
-              <a
-                href="mailto:powerfulconstruction10@gmail.com"
-                class="cs-email"
-              >
-                <span class="fa fa-envelope"></span>
-                <strong> powerfulconstruction10@gmail.com</strong>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-      <div
-        id="sticky-header-with-topbar"
-        class="mainmenu__wrap sticky__header"
+        id="header"
+        class="htc-header"
+        style="background-color: rgba(239, 239, 239, 0.38)"
       >
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-6 col-xs-7">
-              <div class="logo">
-                <a href="https://powerful-construction.com/">
-                  <img src="images/logo/11.png" alt="logo image" />
-                </a>
-              </div>
+        <header>
+          <!-- Top Navbar -->
+          <div class="top_nav">
+            <div class="container">
+              <ul class="list-inline info">
+                <li>
+                  <p>
+                    <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                  </p>
+                </li>
+                <li>
+                  <a href="tel: +1 (201)903-5007" class="cs-phone"
+                    ><span class="fa fa-phone"></span>
+                    <strong> (201)903-5007</strong>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="mailto:powerfulconstruction10@gmail.com"
+                    class="cs-email"
+                  >
+                    <strong> powerfulconstruction10@gmail.com</strong>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </div>
+        </header>
+        <div
+          id="sticky-header-with-topbar"
+          class="mainmenu__wrap sticky__header"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-md-2 col-sm-6 col-xs-7">
+                <div class="logo">
+                  <a href="https://powerful-construction.com/">
+                    <img src="images/logo/11.png" alt="logo image" />
+                  </a>
+                </div>
+              </div>
 
-            <div class="col-md-7 col-sm-6 col-xs-5">
-              <nav class="main__menu__nav hidden-xs hidden-sm">
-                <ul class="main__menu">
-                  <li class="drop">
-                    <a href="https://powerful-construction.com/">HOME</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/about"
-                      >ABOUT</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/service"
-                      >SERVICES</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/Project"
-                      >PROJECTS</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/faq">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/contact"
-                      >CONTACT</a
-                    >
-                  </li>
-                </ul>
-              </nav>
-              <div class="mobile-menu clearfix visible-xs visible-sm">
-                <nav id="mobile_dropdown">
-                  <ul>
-                    <li>
+              <div class="col-md-7 col-sm-6 col-xs-5">
+                <nav class="main__menu__nav hidden-xs hidden-sm">
+                  <ul class="main__menu">
+                    <li class="drop">
                       <a href="https://powerful-construction.com/">HOME</a>
                     </li>
                     <li>
@@ -146,24 +114,55 @@
                     </li>
                   </ul>
                 </nav>
+                <div class="mobile-menu clearfix visible-xs visible-sm">
+                  <nav id="mobile_dropdown">
+                    <ul>
+                      <li>
+                        <a href="https://powerful-construction.com/">HOME</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/about"
+                          >ABOUT</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/service"
+                          >SERVICES</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/Project"
+                          >PROJECTS</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/faq">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/contact"
+                          >CONTACT</a
+                        >
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="col-md-3 hidden-xs main__menu__nav">
+                <a
+                  href="tel: +1 (201)903-5007"
+                  class="phone_text main__menu"
+                  style="color: rgb(203, 0, 0)"
+                >
+                  <span class="fa fa-phone"></span> (201)903-5007
+                </a>
               </div>
             </div>
-            <div class="col-md-3 hidden-xs main__menu__nav">
-              <a
-                href="tel: +1 (201)903-5007"
-                class="phone_text main__menu"
-                style="color: rgb(203, 0, 0)"
-              >
-                <span class="fa fa-phone"></span> (201)903-5007
-              </a>
-            </div>
+            <div class="mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
         </div>
-      </div>
 
-      <!-- End Mainmenu Area -->
-    </div>
+        <!-- End Mainmenu Area -->
+      </div>
       <div
         class="ht__bradcaump__area"
         data--black__overlay="6"
@@ -179,7 +178,11 @@
                 <div class="bradcaump__inner text-center">
                   <h2 class="bradcaump-title">Our Projects</h2>
                   <nav class="bradcaump-inner">
-                    <a class="breadcrumb-item" href="https://powerful-construction.com">POWERFUL</a>
+                    <a
+                      class="breadcrumb-item"
+                      href="https://powerful-construction.com"
+                      >POWERFUL</a
+                    >
                     <span class="brd-separetor">-</span>
                     <span class="breadcrumb-item active"
                       >CONSTRUCTION - LLC</span
@@ -742,11 +745,8 @@
                       </div>
                       <p>Excellent workmanship, highly recommended</p>
                       <h2>
-                        <a href="https://powerful-construction.com/about"
-                          ></a
-                        >
+                        <a href="https://powerful-construction.com/about"></a>
                       </h2>
-                      
                     </div>
                   </div>
                   <!-- End Single Testimonial -->
@@ -761,9 +761,7 @@
                       </div>
                       <p>Top-notch service, exceeded all expectations!</p>
                       <h2>
-                        <a href="https://powerful-construction.com/about"
-                          ></a
-                        >
+                        <a href="https://powerful-construction.com/about"></a>
                       </h2>
                     </div>
                   </div>
@@ -782,9 +780,7 @@
                         with their professionalism.
                       </p>
                       <h2>
-                        <a href="https://powerful-construction.com/about"
-                          ></a
-                        >
+                        <a href="https://powerful-construction.com/about"></a>
                       </h2>
                     </div>
                   </div>
