--- a/contact.html
+++ b/contact.html
@@ -26,35 +26,34 @@
         class="htc-header"
         style="background-color: rgba(239, 239, 239, 0.38)"
       >
-      <header>
-        <!-- Top Navbar -->
-        <div class="top_nav">
-          <div class="container">
-            <ul class="list-inline info">
-              <li>
-                <p>
-                  <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
-                </p>
-              </li>
-              <li>
-                <a href="tel: +1 (201)903-5007" class="cs-phone"
-                  ><span class="fa fa-phone"></span>
-                  <strong> (201)903-5007</strong>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="mailto:powerfulconstruction10@gmail.com"
-                  class="cs-email"
-                >
-                  <span class="fa fa-envelope"></span>
-                  <strong> powerfulconstruction10@gmail.com</strong>
-                </a>
-              </li>
-            </ul>
+        <header>
+          <!-- Top Navbar -->
+          <div class="top_nav">
+            <div class="container">
+              <ul class="list-inline info">
+                <li>
+                  <p>
+                    <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                  </p>
+                </li>
+                <li>
+                  <a href="tel: +1 (201)903-5007" class="cs-phone"
+                    ><span class="fa fa-phone"></span>
+                    <strong> (201)903-5007</strong>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="mailto:powerfulconstruction10@gmail.com"
+                    class="cs-email"
+                  >
+                    <strong> powerfulconstruction10@gmail.com</strong>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </header>
+        </header>
         <div
           id="sticky-header-with-topbar"
           class="mainmenu__wrap sticky__header"
@@ -166,7 +165,11 @@
                 <div class="bradcaump__inner text-center">
                   <h2 class="bradcaump-title">CONTACT</h2>
                   <nav class="bradcaump-inner">
-                    <a class="breadcrumb-item" href="https://powerful-construction.com">POWERFUL</a>
+                    <a
+                      class="breadcrumb-item"
+                      href="https://powerful-construction.com"
+                      >POWERFUL</a
+                    >
                     <span class="brd-separetor">-</span>
                     <span class="breadcrumb-item active"
                       >CONSTRUCTION - LLC</span
